--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -22,8 +22,8 @@
         </div>
 
         <div class="side-nav-right">
-            <a href="#"> <span><img src="#" alt="email"></span>voctechofficial@gmail.com </a>
-            <a href="#"><span><img src="#" alt="phone"></span>(032) 123 - 4567</a>
+            <a href="#"> <span><i class="bi bi-envelope-fill"></i></span>voctechofficial@gmail.com </a>
+            <a href="#"><span><i class="bi bi-telephone-fill"></i></span>(032) 123 - 4567</a>
         </div>
     </nav>
 
@@ -57,21 +57,21 @@
         <div class="cards-grid">
 
         <div class="card-holder-1 card">
-            <h1 class="header text-center"> <img src="#" alt="Icon">Admission</h1>
+            <h1 class="header text-center"> <i class="bi bi-bank2"></i>Admission</h1>
             <div class="img-wrapper"></div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, unde? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, animi! Consequatur itaque quo autem id.</p>
             <a href="">Learn More &#8594;</a>
         </div>
 
         <div class="card-holder-2 card">
-            <h1 class="header text-center"> <img src="#" alt="Icon">Academics</h1>
+            <h1 class="header text-center"><i class="bi bi-book-fill"></i>Academics</h1>
             <div class="img-wrapper"></div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, unde? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, animi! Consequatur itaque quo autem id.</p>
             <a href="">Learn More &#8594;</a>
         </div>
 
         <div class="card-holder-3 card">
-            <h1 class="header text-center"> <img src="#" alt="Icon">Career</h1>
+            <h1 class="header text-center"><i class="bi bi-pen-fill"></i>Career</h1>
             <div class="img-wrapper"></div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, unde? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor tempora et nesciunt repudiandae sunt veniam.</p>
             <a href="">Learn More &#8594;</a>
@@ -85,18 +85,18 @@
 
             <div class="column-grid">     
             <div class="column1 column">
-                <div><img src="#" alt="icon"><h2>National Rewards</h2></div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam omnis iure tempora. Dolorem, id vel? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, ipsum!</p>
+                <span><h2><i class="bi bi-trophy-fill"></i> National Rewards</h2></span>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam omnis iure tempora. Dolorem, id vel? Lorem ipsum dolor sit amet consectetur.</p>
             </div>
             
             <div class="column2 column">
-                <div><img src="#" alt="icon"><h2>Training</h2></div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam omnis iure tempora. Dolorem, id vel? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, ipsum!</p>
+                <span><h2><i class="bi bi-graph-up"></i>Training</h2></span>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam omnis iure tempora. Dolorem, id vel? Lorem ipsum dolor sit amet consectetur.</p>
             </div>
 
             <div class="column3 column">
-                <div><img src="#" alt="icon"><h2>Many Courses</h2></div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam omnis iure tempora. Dolorem, id vel? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, ipsum!</p>
+                <span><h2><i class="bi bi-diagram-3-fill"></i>Many Courses</h2></span>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam omnis iure tempora. Dolorem, id vel? Lorem ipsum dolor sit amet consectetur.!</p>
             </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
         <br><br>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti quo esse dolores sunt blanditiis placeat rerum ipsam at quos quam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae commodi quod quisquam aliquid voluptatum magni dolores dolore.</p>
 
-        <button> Apply for Admission</button>
+        <a href="#"> Apply for Admission</a>
         </div>
     </div>
 
@@ -131,7 +131,7 @@
 
             <div class="">
             <div class="news-pack mb-3 mt-5">
-                <img  src="#" alt="">
+                <img src="#" alt="">
 
                 <div class="mx-3 news-content">
                 <p class="date">SEPTEMBER 12, 2023 / BY JOHN SMITH</p>
@@ -139,21 +139,24 @@
             </div>
 
             <div class="news-pack mb-3">
-                <img  src="#" alt="">
+                <img src="#" alt="">
+
                 <div class="mx-3 news-content">
                 <p class="date">SEPTEMBER 12, 2023 / BY JOHN SMITH</p>
                 <p class="headline">A global MBA for the next generation of business leaders</p></div>
             </div>
 
             <div class="news-pack mb-3">
-                <img  src="#" alt="">
+                <img src="#" alt="">
+
                 <div class="mx-3 news-content">
                 <p class="date">SEPTEMBER 12, 2023 / BY JOHN SMITH</p>
                 <p class="headline">A deadly disease hit Morocco thousands died including children</p></div>
             </div>
 
             <div class="news-pack mb-3">
-                <img  src="#" alt="">
+                <img src="#" alt="">
+
                 <div class="mx-3 news-content">
                 <p class="date">SEPTEMBER 12, 2023 / BY JOHN SMITH</p>
                 <p class="headline">China invaded Taiwan launched its first missiles in Taipei shores</p></div>
@@ -245,7 +248,6 @@
 </section>
 
 <!-- CTA section -->
-
 <section class="cta-container">
 
     <div class="cta-wrapper-1 d-flex flex-column">
@@ -278,8 +280,66 @@
         </div>
 
     </div>
-
 </section>
+
+<!-- Footer Section -->
+
+<div class="footer-container">
+    <div class="footer-grid">
+        <div class="footer-1 footer-item-first">
+            <div><h1>VocTech Academy</h1><p> <span class="f-header">Location:</span><br><span class="p-footer">Cebu South Road <br>Basak, San Nicolas</p></div>
+
+            <div><p> <span class="f-header">Office Hours:</span><br> <span class="p-footer">8:00 am - 5:00 pm</span></p></div>
+
+            <div><p> <span class="f-header">Telephone: </span><br> <span class="p-footer">(032) 401-0531</span></p></div>
+
+            <div><p> <span class="f-header">Email:</span><br> <span class="p-footer">voctechseniorhighschool@gmail.com</span></p></div>
+        </div>
+
+        <div class="footer-2 footer-item">
+            <h1>Our Academy</h1>
+            <p><a href="#">Academic</a></p>
+            <p><a href="#">Planning & Administration</a></p>
+            <p><a href="#">Campus Safety</a></p>
+            <p><a href="#">Office of the President</a></p>
+            <p><a href="#">Faulty Services</a></p>
+            <p><a href="#">Admin Office</a></p>
+        </div>
+
+        <div class="footer-3 footer-item">
+            <h1>Admission</h1>
+            <p><a href="#">Admissions</a></p>
+            <p><a href="#">Student Life</a></p>
+            <p><a href="#">Research</a></p>
+            <p><a href="#">Alumni</a></p>
+            <p><a href="#">Enrollment</a></p>
+        </div>
+
+        <div class="footer-4 footer-item">
+            <h1>Explore</h1>
+            <p><a href="#">History & Mission</a></p>
+            <p><a href="#">Administration</a></p>
+            <p><a href="#">Community</a></p>
+            <p><a href="#">News Network</a></p>
+            <p><a href="#">Employment</a></p>
+            <p><a href="#">Our Campuses</a></p>
+            <p><a href="#">Visitor information</a></p>
+        </div>
+    </div>
+
+        <div class="footer-5">
+            <div class="l-footer d-flex">
+                <p><a href="#">Privacy & Cookies</a></p>
+                <p><a href="#">Terms & Conditions</a></p>
+                <p><a href="#">Accessibility</a></p>
+                <p><a href="#">Contact Us</a></p>
+            </div>
+
+            <p class="f-copyright">© 2023 VocTech Academy. All Rights Reserved</p>
+        </div>
+
+</div>
+
 
 
 </body>
