--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 
 <!-- Nav top -->
+
+<nav id="nav-container">
     <nav id="nav-bar-top">
         <div class="side-nav-left">
             <a href="#">ACADEMICS </a>
@@ -41,7 +43,26 @@
             <li><a href="#">Contacts</a></li>
         </ul>
     </nav>
-    
+</nav>
+
+<!-- Script for Navigation -->
+
+<script>
+
+const nav = document.getElementById('nav-container');
+window.onscroll = function () { 
+    if (document.body.scrollTop >= 200 || document.documentElement.scrollTop >= 200 ) {
+        nav.classList.add("nav-colored");
+        nav.classList.remove("nav-transparent");
+    } 
+    else {
+        nav.classList.add("nav-transparent");
+        nav.classList.remove("nav-colored");
+    }
+};
+
+</script>
+
 <!-- Hero Section-->
     <section class="hero-section">
         <img src="imgs/hero-bg.png" class="img-fluid" alt="">
@@ -58,23 +79,23 @@
 
         <div class="card-holder-1 card">
             <h1 class="header text-center"> <i class="bi bi-bank2"></i>Admission</h1>
-            <div class="img-wrapper"></div>
+            <div class="img-wrapper"><img src="imgs/col-img-1.png" alt=""></div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, unde? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, animi! Consequatur itaque quo autem id.</p>
-            <a href="">Learn More &#8594;</a>
+            <a href="#">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
 
         <div class="card-holder-2 card">
             <h1 class="header text-center"><i class="bi bi-book-fill"></i>Academics</h1>
-            <div class="img-wrapper"></div>
+            <div class="img-wrapper"><img src="imgs/col-img-2.png" alt=""></div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, unde? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, animi! Consequatur itaque quo autem id.</p>
-            <a href="">Learn More &#8594;</a>
+            <a href="#">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
 
         <div class="card-holder-3 card">
             <h1 class="header text-center"><i class="bi bi-pen-fill"></i>Career</h1>
-            <div class="img-wrapper"></div>
+            <div class="img-wrapper"><img src="imgs/col-img-3.png" alt=""></div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat, unde? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor tempora et nesciunt repudiandae sunt veniam.</p>
-            <a href="">Learn More &#8594;</a>
+            <a href="#">Learn More <i class="bi bi-arrow-right"></i></a>
         </div>
         </div>
 
@@ -105,19 +126,20 @@
 <!-- Advertisement Section  -->
     <div class="advert-container">
         
-        <div class="advert-content">
+        <div class="advert">
         <h1>VocTech Offers 100% Free Tuition</h1>
         <h4>No Misicellaneous Fee, No Entrance Fee</h4>
         <br><br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti quo esse dolores sunt blanditiis placeat rerum ipsam at quos quam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae commodi quod quisquam aliquid voluptatum magni dolores dolore.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti quo esse dolores sunt blanditiis placeat rerum ipsam at quos quam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae commodi quod quisquam aliquid voluptatum magni dolores dolore.</p><br><br>
 
-        <a href="#"> Apply for Admission</a>
+        <div id="ad-btn"><a href="#"> Apply for Admission </a></div>
         </div>
+
     </div>
 
 <!-- News & Update Section -->
 <div id="news-container">
-    <video src="#" width="100%" height="500px" style="background: black"></video>
+    <video src="videos/School-tour.mp4" width="100%" height="500px" controls></video>
 
     <div class="update mt-5">
 
@@ -129,37 +151,37 @@
         <div class="subject-2 subject d-flex flex-column">
             <h1>School News & Updates</h1>
 
-            <div class="">
+            <div class="container">
             <div class="news-pack mb-3 mt-5">
-                <img src="#" alt="">
+                <img onclick="location.href='#'" src="imgs/News-1.png" alt="">
 
                 <div class="mx-3 news-content">
-                <p class="date">SEPTEMBER 12, 2023 / BY JOHN SMITH</p>
-                <p class="headline">Professor Albert Joint research on mobile money in tanzania</p></div>
+                <p class="date">OCTOBER 10, 2023 / BY JOHN SMITH</p>
+                <p onclick="location.href='#'" class="headline">Professor Albert Joint research on mobile money in tanzania</p></div>
             </div>
 
             <div class="news-pack mb-3">
-                <img src="#" alt="">
+                <img onclick="location.href='#'" src="imgs/News-2.png" alt="">
 
                 <div class="mx-3 news-content">
-                <p class="date">SEPTEMBER 12, 2023 / BY JOHN SMITH</p>
-                <p class="headline">A global MBA for the next generation of business leaders</p></div>
+                <p class="date">AUGUST 12, 2023 / BY JOHN SMITH</p>
+                <p onclick="location.href='#'"class="headline">A global MBA for the next generation of business leaders</p></div>
             </div>
 
             <div class="news-pack mb-3">
-                <img src="#" alt="">
+                <img onclick="location.href='#'" src="imgs/News-3.png" alt="">
 
                 <div class="mx-3 news-content">
-                <p class="date">SEPTEMBER 12, 2023 / BY JOHN SMITH</p>
-                <p class="headline">A deadly disease hit Morocco thousands died including children</p></div>
+                <p class="date">SEPTEMBER 23, 2023 / BY JOHN SMITH</p>
+                <p onclick="location.href='#'" class="headline">A deadly disease hit Morocco thousands died including children</p></div>
             </div>
 
             <div class="news-pack mb-3">
-                <img src="#" alt="">
+                <img onclick="location.href='#'" src="imgs/News-2.png" alt="">
 
                 <div class="mx-3 news-content">
-                <p class="date">SEPTEMBER 12, 2023 / BY JOHN SMITH</p>
-                <p class="headline">China invaded Taiwan launched its first missiles in Taipei shores</p></div>
+                <p class="date">JANUARY 15, 2023 / BY JOHN SMITH</p>
+                <p onclick="location.href='#'" class="headline">China invaded Taiwan launched its first missiles in Taipei shores</p></div>
             </div>
 
             <div class="next-page"> <a href="#">Read The Blog</a></div>
@@ -211,7 +233,10 @@
     <div class="events-grid">
 
         <div class="e-grid">
-            <img src="#" alt="">
+            <div class="e-img-holder">
+                <div class="dark-overlay">
+                    <span><i class="bi bi-search"></i> <br> View Details </span></div><img src="imgs/event-1.png" alt=""></div>
+
             <div class="e-content">
                 <div class="e-date"><h1>07 <br> <span>AUG</span></h1></div>
                 <div class="e-headline">
@@ -222,7 +247,10 @@
         </div>
 
         <div class="e-grid">
-            <img src="#" alt="">
+            <div class="e-img-holder">
+                <div class="dark-overlay">
+                    <span><i class="bi bi-search"></i> <br> View Details </span></div><img src="imgs/event-2.png" alt=""></div>
+
             <div class="e-content">
                 <div class="e-date"><h1>07 <br> <span>JAN</span></h1></div>
                 <div class="e-headline">
@@ -233,7 +261,11 @@
         </div>
 
         <div class="e-grid">
-            <img src="#" alt="">
+            <div class="e-img-holder">
+                <div class="dark-overlay">
+                    <span><i class="bi bi-search"></i> <br> View Details</span>
+                    </div><img src="imgs/event-3.png" alt=""></div>
+
             <div class="e-content">
                 <div class="e-date"><h1>07 <br> <span>SEP</span></h1></div>
                 <div class="e-headline">
@@ -251,15 +283,15 @@
 <section class="cta-container">
 
     <div class="cta-wrapper-1 d-flex flex-column">
-        <h1>Quick Links</h1>
+        <h1> <i class="bi bi-link-45deg"></i>Quick Links</h1>
 
         <div class="d-flex flex-column q-links-wrapper">
-            <a href="#" class="text-white my-3">Alumni & Honors</a>
-            <a href="#" class="text-white my-3">School Calendar</a>
-            <a href="#" class="text-white my-3">All VocTech Events</a>
-            <a href="#" class="text-white my-3">Partnership & Out reach</a>
-            <a href="#" class="text-white my-3">Academic Programs</a>
-            <a href="#" class="text-white my-3">Tuition and Fees</a> 
+            <a href="#" class="my-3">Alumni & Honors</a>
+            <a href="#" class="my-3">School Calendar</a>
+            <a href="#" class="my-3">All VocTech Events</a>
+            <a href="#" class="my-3">Partnership & Out reach</a>
+            <a href="#" class="my-3">Academic Programs</a>
+            <a href="#" class="my-3">Tuition and Fees</a> 
         </div>
  
     </div>
@@ -337,10 +369,7 @@
 
             <p class="f-copyright">© 2023 VocTech Academy. All Rights Reserved</p>
         </div>
-
 </div>
-
-
 
 </body>
 </html>
