--- a/aboutus.html
+++ b/aboutus.html
@@ -37,16 +37,15 @@
         </nav>
         </nav>
 
-<!-- Hero Section About -->
+<!-- About Section -->
 <section class="abt-container d-flex flex-column justify-content-end">
     <h2>Know Us Better</h2>
-    <h1 class="display-1">About Us</h1>
+    <h1 class="a-header">About Us</h1>
 </section>
 
 <!-- Histoy Section -->
-
 <section class="h-container">
-    <div class="h-navigation mb-5"><span> Home > About Us</span></div>
+    <div class="h-navigation mb-5"><span class="h-home"> Home </span> > <span> About Us</span></div>
     <h1 class="h-header mb-5 display-4"> VocTech's History </h1>
 
     <div class="h-grid">
@@ -69,7 +68,6 @@
 </section>
 
 <!-- Vision Mission Goals Section -->
-
 <section class="vmg-container d-flex flex-column justify-content-center">
 
     <div class="vmg-grid">
@@ -88,10 +86,47 @@
             <h1>Goals</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In aperiam minus nihil deleniti, repellendus delectus.</p>
         </div>
-
     </div>
 </section>
 
+<!-- Campus, Graduation info Section -->
+<section class="a-col2-container">
+    <div class="a-campus-wrapper a-item">
+        <div class="campus-info a-info">
+            <h1><span><i class="bi bi-hospital"></i></span> Campus</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ullam modi, aspernatur, adipisci explicabo mollitia ut quas beatae, iusto et cumque quibusdam nisi ipsum nobis voluptatum cupiditate animi fugit error?</p>    
+        </div>
+        <img src="imgs/campus.png" alt="">
+    </div>
+
+    <div class="a-graduation-wrapper a-item">
+        <img src="imgs/graduation.png" alt="">
+        <div class="graduation-info a-info">
+            <h1><span><i class="bi bi-mortarboard"></i></span> Graduation</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ullam modi, aspernatur, adipisci explicabo mollitia ut quas beatae, iusto et cumque quibusdam nisi ipsum nobis voluptatum cupiditate animi fugit error?</p>    
+        </div>
+    </div>
+
+    <div class="a-training-wrapper a-item">
+        <div class="training-info a-info">
+            <h1><span><i class="bi bi-patch-check"></i></span> Training</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ullam modi, aspernatur, adipisci explicabo mollitia ut quas beatae, iusto et cumque quibusdam nisi ipsum nobis voluptatum cupiditate animi fugit error?</p>    
+        </div>
+        <img src="imgs/training.png" alt="">
+    </div>
+</section>
+
+<!-- Partnership Section -->
+<section class="p-container">
+    <h3 class="pb-5">Our Partnership</h3>
+
+    <div class="p-grid d-flex align-items-center justify-content-center">
+        <img src="imgs/p-1.svg" class="mx-5" alt="">
+        <img src="imgs/p-2.svg" class="mx-5" alt="">
+        <img src="imgs/p-3.svg" class="mx-5" alt="">
+        <img src="imgs/p-4.svg" class="mx-5" alt="">
+    </div>
+</section>
 
 
 
