--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Page</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">Events</a></li>
             <li><a href="#">News</a></li>
@@ -315,7 +315,6 @@ window.onscroll = function () {
 </section>
 
 <!-- Footer Section -->
-
 <div class="footer-container">
     <div class="footer-grid">
         <div class="footer-1 footer-item-first">
@@ -328,7 +327,8 @@ window.onscroll = function () {
             <div><p> <span class="f-header">Email:</span><br> <span class="p-footer">voctechseniorhighschool@gmail.com</span></p></div>
         </div>
 
-        <div class="footer-2 footer-item">
+        <div class="footer-2 footer-item d-flex flex-column align-items-end">
+            <div class="f-item-content">
             <h1>Our Academy</h1>
             <p><a href="#">Academic</a></p>
             <p><a href="#">Planning & Administration</a></p>
@@ -336,18 +336,22 @@ window.onscroll = function () {
             <p><a href="#">Office of the President</a></p>
             <p><a href="#">Faulty Services</a></p>
             <p><a href="#">Admin Office</a></p>
+            </div>
         </div>
 
-        <div class="footer-3 footer-item">
+        <div class="footer-3 footer-item d-flex flex-column align-items-end">
+            <div class="f-item-content">
             <h1>Admission</h1>
             <p><a href="#">Admissions</a></p>
             <p><a href="#">Student Life</a></p>
             <p><a href="#">Research</a></p>
             <p><a href="#">Alumni</a></p>
             <p><a href="#">Enrollment</a></p>
+            </div>
         </div>
 
-        <div class="footer-4 footer-item">
+        <div class="footer-4 footer-item d-flex flex-column align-items-end">
+            <div class="f-item-content">
             <h1>Explore</h1>
             <p><a href="#">History & Mission</a></p>
             <p><a href="#">Administration</a></p>
@@ -356,6 +360,7 @@ window.onscroll = function () {
             <p><a href="#">Employment</a></p>
             <p><a href="#">Our Campuses</a></p>
             <p><a href="#">Visitor information</a></p>
+            </div>
         </div>
     </div>
 
@@ -370,6 +375,7 @@ window.onscroll = function () {
             <p class="f-copyright">© 2023 VocTech Academy. All Rights Reserved</p>
         </div>
 </div>
+
 
 </body>
 </html>
