--- a/admission.html
+++ b/admission.html
@@ -46,7 +46,7 @@
 <!-- Details Section -->
 
 <section class="details-container">
-    <div class="d-navigation mb-5"><span class="d-home"> Home </span> > <span> Admission</span></div>
+    <div class="ad-navigation mb-5"><span class="ad-home"> Home </span> > <span> Admission</span></div>
 
     <div class="d-content">
         <h1 class="mb-5">Details About How To Apply</h1>
@@ -134,7 +134,6 @@
 </section>
 
 <!-- On site Application Section -->
-
 <section class="os-container">
     <div class="os-grid">
         <div class="os-grid-item-1">
