--- a/eventsA.html
+++ b/eventsA.html
@@ -6,8 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style/career.css">
-    <title>Career Page</title>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="stylesheet" href="style/academics.css">
+    <link rel="stylesheet" href="style/eventsA.css">
+    <title>Document</title>
 </head>
 <body>
 
@@ -48,60 +50,59 @@
     </nav>
 </nav>
 
-<!-- Career Hero Section -->
-<section class="career-container d-flex flex-column justify-content-end">
-    <h2>Opportunities</h2>
-    <h1 class="ca-header">Careers</h1>
+<!-- Events Hero Section -->
+<section class="event-container d-flex flex-column justify-content-end">
+    <h1 class="event-header">Events</h1>
+    <h2>VocTech Senior High School</h2>
 </section>
 
-<!-- Explore Section -->
-<section class="ca-explore-container">
-    <div class="ca-navigation mb-5"><span class="ca-home"> Home </span> > <span> Careers</span></div>
+<!-- The Events-->
 
-    <div class="ca-explore-header">
-        <h1>Join Us</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis, incidunt. Eos neque tenetur magnam culpa nesciunt accusamus nam sapiente suscipit! em ipsum dolor, sit amet consectetur adipisicing elit. Facilis, incidunt.</p>
+<div class="eventpage-container">
+
+    <div class="event-head d-flex justify-content-between align-items-center">
+        <div><h1 class="fw-bold">This Month Events <span>Upcoming</span></h1> </div>
+        <a href="#">View Event Calendar</a>
     </div>
 
-    <div class="ca-grid">
-        <div class="ca-grid-item-1 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">Programming</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
+    <div class="event-month my-5"><p>September 2023</p></div>
+
+    <div class="event-grid">
+        <div class="event-grid-item">
+            <div class="event-day text-center align-self-start mt-5"><h1>TUE</h1><h1>23</h1></div>
+            <div class="event-head-info m-5"><h1>Future of OJT in the country</h1>
+            <p>published by: Administrator</p><br><p class="mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque vero aliquam nulla repellendus in ex aspernatur omnis officiis adipisci ipsa minus nam reprehenderit, beatae fuga corporis debitis, amet ullam. Odio! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, doloremque.</p>
+            <a href="#">Read More</a></div>
+
+            <div class="event-img-holder"><img src="imgs/event-img-1.png" class="img-fluid" alt=""></div>     
         </div>
-        <div class="ca-grid-item-2 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">EIM</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
+
+        <div class="event-grid-item">
+            <div class="event-day text-center align-self-start mt-5"><h1>SAT</h1><h1>10</h1></div>
+            <div class="event-head-info m-5"><h1>UFO Sightseeing near Macro Bay</h1>
+            <p>published by: Administrator</p><br><p class="mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque vero aliquam nulla repellendus in ex aspernatur omnis officiis adipisci ipsa minus nam reprehenderit, beatae fuga corporis debitis, amet ullam. Odio! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, doloremque.</p>
+            <a href="#">Read More</a></div>
+
+            <div class="event-img-holder"><img src="imgs/event-img-2.png" class="img-fluid" alt=""></div> 
         </div>
-        <div class="ca-grid-item-3 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">STEM</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
+
+        <div class="event-grid-item">
+            <div class="event-day text-center align-self-start mt-5"><h1>MON</h1><h1>07</h1></div>
+            <div class="event-head-info m-5"><h1>Boxing Events</h1>
+            <p>published by: Administrator</p><br><p class="mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque vero aliquam nulla repellendus in ex aspernatur omnis officiis adipisci ipsa minus nam reprehenderit, beatae fuga corporis debitis, amet ullam. Odio! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, doloremque.</p>
+            <a href="#">Read More</a></div>
+
+            <div class="event-img-holder"><img src="imgs/event-img-3.png" class="img-fluid" alt=""></div>  
         </div>
-        <div class="ca-grid-item-4 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">Animators</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
+
+        <div class="next-prev-container d-flex justify-content-between mt-5">
+            <a href="#"><i class="bi bi-arrow-left mx-1"></i>Previous Events</a>
+            <a href="#">Upcoming Events <i class="bi bi-arrow-right mx-1"></i></a>
         </div>
-        <div class="ca-grid-item-5 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">Visual Arts</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
-        </div>
-        <div class="ca-grid-item-6 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">CSS</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
-        </div>
+        
+        <div class="event-calendar text-center my-5"> <a href="#">View Events Calendar</a></div>
     </div>
-</section>
+</div>
 
 <!-- Footer Section -->
 <div class="footer-container">
@@ -164,8 +165,5 @@
             <p class="f-copyright">© 2023 VocTech Academy. All Rights Reserved</p>
         </div>
 </div>
-
-
-    
 </body>
 </html>
