--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 </head>
 <body>
 
+ <!-- Navigation Section -->
+    
 <!-- Nav top -->
+
 <nav id="nav-container">
     <nav id="nav-bar-top">
         <div class="side-nav-left">
-            <a href="#">ACADEMICS </a>
-            <a href="#">ADMISSION </a>
+            <a href="academics.html">ACADEMICS </a>
+            <a href="admission.html">ADMISSION </a>
             <a href="#">STUDENT LIFE </a>
             <a href="#">RESEARCH </a>
             <a href="#">ALUMNI </a>
@@ -30,16 +33,18 @@
 
 <!-- Nav bottom -->
     <nav id="nav-bar-btm">
+        <div class="main-logo" onclick="location.href='index.html'">
         <h1 class="vocTech-logo"> <img src="imgs/VocTech Emblem.png" alt=""> VocTech Academy<br />
          <span>Senior High School</span></h1>
+         </div>
 
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Courses</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutus.html">About</a></li>
+            <li><a href="academics.html">Courses</a></li>
+            <li><a href="eventsA.html">Events</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="contact.html">Contacts</a></li>
         </ul>
     </nav>
 </nav>
@@ -187,12 +192,10 @@ window.onscroll = function () {
 
         </div>
         </div>
-
     </div>
 </div>
 
 <!-- 4 Column Section -->
-
 <section class="column-container">
 
     <div class="column-parent-1">
@@ -225,7 +228,6 @@ window.onscroll = function () {
 </section>
 
 <!-- Events Section -->
-
 <section class="events-container">
     <div class="events-header"><h1>VocTech Events</h1></div>
 
@@ -352,7 +354,7 @@ window.onscroll = function () {
         <div class="footer-4 footer-item d-flex flex-column align-items-end">
             <div class="f-item-content">
             <h1>Explore</h1>
-            <p><a href="#">History & Mission</a></p>
+            <p><a href="aboutus.html">History & Mission</a></p>
             <p><a href="#">Administration</a></p>
             <p><a href="#">Community</a></p>
             <p><a href="#">News Network</a></p>
