--- a/news.html
+++ b/news.html
@@ -6,8 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style/career.css">
-    <title>Career Page</title>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <link rel="stylesheet" href="style/news.css">
+    <link rel="stylesheet" href="style/academics.css">
+    <title>News Page</title>
 </head>
 <body>
 
@@ -48,59 +50,37 @@
     </nav>
 </nav>
 
-<!-- Career Hero Section -->
-<section class="career-container d-flex flex-column justify-content-end">
-    <h2>Opportunities</h2>
-    <h1 class="ca-header">Careers</h1>
-</section>
+<!-- All News Section -->
 
-<!-- Explore Section -->
-<section class="ca-explore-container">
-    <div class="ca-navigation mb-5"><span class="ca-home"> Home </span> > <span> Careers</span></div>
+<section class="alln-section">
 
-    <div class="ca-explore-header">
-        <h1>Join Us</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis, incidunt. Eos neque tenetur magnam culpa nesciunt accusamus nam sapiente suscipit! em ipsum dolor, sit amet consectetur adipisicing elit. Facilis, incidunt.</p>
+    <div class="n-heading d-flex justify-content-between align-items-center"><h1 class="my-5">VocTech News</h1></div>
+
+    <div class="news-item mb-5">
+        <div class="img-item"><img src="imgs/news-section-1.png" alt=""></div>
+        <div class="n-item-date d-flex justify-content-between"><p>January 23, 2023</p><span><i class="bi bi-share-fill mx-2"></i><i class="bi bi-suit-heart-fill mx-4"></i></span></div>
+
+        <div class="n-header"><h1>Massive hole in the sky seen from Mexico</h1></div>
+        <div class="n-item-par-1"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem labore quo facilis obcaecati enim sit velit blanditiis, corporis quibusdam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, velit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, eum.</p><br><a href="#">Read More</a></div>
     </div>
 
-    <div class="ca-grid">
-        <div class="ca-grid-item-1 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">Programming</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
-        </div>
-        <div class="ca-grid-item-2 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">EIM</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
-        </div>
-        <div class="ca-grid-item-3 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">STEM</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
-        </div>
-        <div class="ca-grid-item-4 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">Animators</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
-        </div>
-        <div class="ca-grid-item-5 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">Visual Arts</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
-        </div>
-        <div class="ca-grid-item-6 ca-item">
-            <span></span><br>
-            <h2 class="fw-bold">CSS</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium illum iste harum. Laborum totam in obcaecati aliquam explicabo excepturi quidem?</p>
-            <a href="#">Read more</a>      
-        </div>
+    <div class="news-item mb-5">
+        <div class="img-item"><img src="imgs/news-section-2.png" alt=""></div>
+        <div class="n-item-date d-flex justify-content-between"><p>October 4, 2023</p><span<i class="bi bi-share-fill mx-2"></i><i class="bi bi-suit-heart-fill mx-4"></i><span></div>
+
+        <div class="n-header"><h1>Marburg Virus Releasing in candy form</h1></div>
+        <div class="n-item-par-2"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem labore quo facilis obcaecati enim sit velit blanditiis, corporis quibusdam rem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, modi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, eum.</p><br><a href="#">Read More</a></div>
     </div>
+
+    <div class="news-item mb-5">
+        <div class="img-item"><img src="imgs/news-section-3.png" alt=""></div>
+        <div class="n-item-date d-flex justify-content-between"><p>September 23, 2023</p><span><i class="bi bi-share-fill mx-2"></i><i class="bi bi-suit-heart-fill mx-4"></i></span></div>
+
+        <div class="n-header"><h1>World shifting to 5G pregnancy</h1></div>
+        <div class="n-item-par-3"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem labore quo facilis obcaecati enim sit velit blanditiis, corporis quibusdam rem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est, magnam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, eum.</p><br><a href="#">Read More</a></div>
+    </div>
+
+
 </section>
 
 <!-- Footer Section -->
@@ -166,6 +146,5 @@
 </div>
 
 
-    
 </body>
 </html>
