--- a/index.html
+++ b/index.html
@@ -97,10 +97,17 @@ menuExit.onclick = function closeMenu() {
 
 <!-- Hero Section-->
     <section class="hero-section">
-        <img src="imgs/hero-bg.png" class="img-fluid" alt="">
-        <h1>BUILDING SKILLS FOR <br> A BRIGHT FUTURE</h1>
-        <p>“Our Mission is to Lorem ipsum dolor sit amet consectetur. Elementum consectetur amet suscipit utpellentesque feugiat sit vitae.”</p>
 
+        <!-- <img src="imgs/hero-bg.png" class="img-fluid" alt=""> -->
+        <div class="hero-content" style="z-index: 99999">
+            <h1>BUILDING SKILLS FOR <br> A BRIGHT FUTURE</h1>
+            <p>“Our Mission is to Lorem ipsum dolor sit amet consectetur. Elementum consectetur amet suscipit utpellentesque feugiat sit vitae.”</p>
+        </div>
+
+        <video loop autoplay muted>
+            <source src="videos/hero-bg.mp4" type="video/mp4">
+        </video>
+    
         <div id="shadow-overlay"></div>
     </section>
 
