--- a/aboutus.html
+++ b/aboutus.html
@@ -199,7 +199,7 @@ menuExit.onclick = function closeMenu() {
             <p><a href="#">Planning & Administration</a></p>
             <p><a href="#">Campus Safety</a></p>
             <p><a href="#">Office of president</a></p>
-            <p><a href="#">Faulty Services</a></p>
+            <p><a href="#">Faculty Services</a></p>
             <p><a href="#">Admin Office</a></p>
             </div>
 
